# nimbus

./: .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/core/: config.py  errors.py  logging.py  middleware.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/models/: __init__.py  audit_event.py  content_chunk.py  content_event.py  content_item.py  project.py
apps/api/app/schemas/: ask.py  chat.py  common.py  content.py  insights.py  project.py  user.py
apps/api/app/services/: audit.py  content_events.py  content_sync.py
apps/api/app/services/ai/: base.py  factory.py  foundry_provider.py  mock_provider.py
apps/api/app/services/identity/: current_user.py
apps/api/app/services/rag/: indexer.py  (+1 more)
apps/api/app/tests/: conftest.py  test_auth.py  test_chat.py  test_content_routes.py  test_content_sync.py  test_errors.py  test_health.py  test_insights.py  test_projects_routes.py  test_rag.py
apps/api/content/: README.md
apps/api/content/guidance/: sensitive-data.md
apps/api/content/playbooks/: copilot-excel-budget-variance.md  copilot-outlook-inbox-triage.md  copilot-word-report-first-draft.md
apps/api/content/prompts/: budget-variance-narrative.md  excel-formula-explainer.md  meeting-notes-to-actions.md  policy-plain-language-summary.md  sop-first-draft.md  vendor-email-draft.md
apps/api/content/tools/: microsoft-365-copilot.md
(+109 files in other folders)
