[project]
name = "nimbus-api"
version = "0.1.0"
description = "This is a AI first platform for F&O staff to use — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-json-logger>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # JWT validation for Microsoft Entra ID
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
    # Azure SDKs (managed identity / keyless where possible)
    "azure-identity>=1.17",
    "azure-storage-blob>=12.20",
    # Observability
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "azure-monitor-opentelemetry>=1.6",
]

[project.optional-dependencies]
foundry = [
    # Pin to the SDK you deploy against; see services/ai/foundry_provider.py
    "openai>=1.40",
]
search = [
    "azure-search-documents>=11.5",
]
sqlserver = [
    # Azure SQL / SQL Server driver (needs ODBC Driver 18 on the host/image)
    "pyodbc>=5.1",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["app/tests"]
